[tool.poetry]
name = "tmp.abm8e6fov0"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "~7.2"
mypy = "0.991"
phantom-types = "~1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
